Implement d_discard for dk. This closes PR 47940.